--- a/src/components/Test/styles.module.scss
+++ b/src/components/Test/styles.module.scss
@@ -1,6 +1,11 @@
 .test {
   color: $red;
   display: flex;
+  max-width: $global-width;
+
+  @include breakpoint(medium) {
+    color: $blue;
+  }
 }
 
 .hello {
