--- a/src/app.scss
+++ b/src/app.scss
@@ -1,2 +1,82 @@
+@import 'settings';
+@import './mixins';
 
-$red: pink;
+@import '~foundation-sites/scss/foundation';
+@include foundation-flex-grid;
+@include foundation-flex-classes;
+
+// colors
+$white: #fff;
+$black: #414143;
+$blackest: #000;
+$blue: #59beca;
+$green: #34d261;
+$gray: #999;
+$grey: $gray;
+$yellow: #fbbe18;
+$red: #ed5e3c;
+
+// custom breakpoint
+$mobile-break: 500px;
+
+// project colors
+$primary: $black;
+$secondary: $red;
+$background: $white;
+$border-color: lighten($black, 60);
+$box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
+
+// default fonts
+$body: proxima-nova, sans-serif;
+$heading: proxima-nova, sans-serif;
+
+// nav
+$nav-height: 65px;
+
+// z-index
+$z-background-img: -1;
+$z-background: -2;
+$z-nav: 5;
+
+// UNUSED STYLES
+
+// @include foundation-grid;
+// @include foundation-button;
+// @include foundation-forms;
+// @include foundation-range-input;
+// @include foundation-accordion;
+// @include foundation-accordion-menu;
+// @include foundation-badge;
+// @include foundation-breadcrumbs;
+// @include foundation-button-group;
+// @include foundation-callout;
+// @include foundation-close-button;
+// @include foundation-menu;
+// @include foundation-menu-icon;
+// @include foundation-drilldown-menu;
+// @include foundation-dropdown;
+// @include foundation-dropdown-menu;
+// @include foundation-flex-video;
+// @include foundation-label;
+// @include foundation-media-object;
+// @include foundation-off-canvas;
+// @include foundation-orbit;
+// @include foundation-pagination;
+// @include foundation-progress-bar;
+// @include foundation-progress-element;
+// @include foundation-meter-element;
+// @include foundation-slider;
+// @include foundation-sticky;
+// @include foundation-reveal;
+// @include foundation-switch;
+// @include foundation-table;
+// @include foundation-tabs;
+// @include foundation-thumbnail;
+// @include foundation-title-bar;
+// @include foundation-tooltip;
+// @include foundation-top-bar;
+// @include foundation-visibility-classes;
+// @include foundation-float-classes;
+
+// @include motion-ui-transitions;
+// @include motion-ui-animations;
