--- a/src/components/Test/styles.module.scss
+++ b/src/components/Test/styles.module.scss
@@ -6,6 +6,11 @@
   @include breakpoint(medium) {
     color: $blue;
   }
+
+  @include nojs() {
+    color: rebeccapurple;
+    background-color: red;
+  }
 }
 
 .hello {
