--- a/src/app.scss
+++ b/src/app.scss
@@ -9,19 +9,17 @@
 $white: #fff;
 $black: #414143;
 $blackest: #000;
-$blue: #59beca;
-$green: #34d261;
+$blue: #00f;
+$green: #0f0;
 $gray: #999;
 $grey: $gray;
-$yellow: #fbbe18;
-$red: #ed5e3c;
+$yellow: #ff0;
+$red: #f00;
 
-// custom breakpoint
-$mobile-break: 500px;
 
 // project colors
 $primary: $black;
-$secondary: $red;
+$secondary: $white;
 $background: $white;
 $border-color: lighten($black, 60);
 $box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
