--- a/src/components/PageTransition/styles.module.scss
+++ b/src/components/PageTransition/styles.module.scss
@@ -1,5 +1,16 @@
-.cover {
-  background-color: #00f;
+.fade {
+  background-color: $background;
+  bottom: 0;
+  display: none;
+  left: 0;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 100;
+}
+
+.swipe {
+  background-color: $background;
   bottom: 0;
   left: -100%;
   position: fixed;
