--- a/src/components/Form/Submit/Checkmark/styles.module.scss
+++ b/src/components/Form/Submit/Checkmark/styles.module.scss
@@ -4,46 +4,47 @@ $check-width: $check-height / 2;
 $check-left: $circle-size / 6;
 $check-thickness: $circle-size / 10;
 
-.checkmark-circle {
+.background {
+  background: $green;
+  border-radius: 50%;
+  height: $circle-size;
+  position: absolute;
+  width: $circle-size;
+}
+
+.circle {
   display: inline-block;
   height: $circle-size;
   margin-right: 10px;
   position: relative;
   vertical-align: middle;
   width: $circle-size;
+}
 
-  .background {
-    background: $green;
-    border-radius: 50%;
-    height: $circle-size;
+.checkmark {
+  border-radius: 5px;
+
+  &:after {
+    animation-delay: 100ms;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    animation-name: checkmark;
+    animation-timing-function: ease;
+    border-radius: 2.5px;
+    border-right: $check-thickness solid $white;
+    border-top: $check-thickness solid $white;
+    content: '';
+    height: 0;
+    left: $check-left;
+    opacity: 1;
     position: absolute;
-    width: $circle-size;
-  }
-
-  .checkmark {
-    border-radius: 5px;
-
-    &:after {
-      animation-delay: 100ms;
-      animation-duration: 1s;
-      animation-fill-mode: forwards;
-      animation-name: checkmark;
-      animation-timing-function: ease;
-      border-radius: 2.5px;
-      border-right: $check-thickness solid $white;
-      border-top: $check-thickness solid $white;
-      content: '';
-      height: $check-height;
-      left: $check-left;
-      opacity: 1;
-      position: absolute;
-      top: $check-height;
-      transform: rotate(225deg) scaleX(-1);
-      transform-origin: left top;
-      width: $check-width;
-    }
+    top: $check-height;
+    transform: rotate(225deg) scaleX(-1);
+    transform-origin: left top;
+    width: $check-width;
   }
 }
+
 @keyframes checkmark {
   0% {
     height: 0;
