add messaging system coloring

--- a/src/components/Form/Inputs/styles.module.scss
+++ b/src/components/Form/Inputs/styles.module.scss
@@ -6,8 +6,8 @@
   color: $red;
 
   .input {
-    border: 1px solid $red;
-    outline-color: $red;
+    border: 1px solid $error;
+    outline-color: $error;
   }
 }
 
