--- a/src/components/Form/Submit/Checkmark/styles.module.scss
+++ b/src/components/Form/Submit/Checkmark/styles.module.scss
@@ -5,7 +5,7 @@ $check-left: $circle-size / 6;
 $check-thickness: $circle-size / 10;
 
 .background {
-  background: $green;
+  background: $success;
   border-radius: 50%;
   height: $circle-size;
   position: absolute;
