--- a/src/app.scss
+++ b/src/app.scss
@@ -24,6 +24,10 @@ $background: $white;
 $border-color: lighten($black, 60);
 $box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
 
+// messaging colors
+$success: $green;
+$error: $red;
+
 // default fonts
 $body-font: proxima-nova, sans-serif;
 $body-weight: 400;
