--- a/src/app.scss
+++ b/src/app.scss
@@ -25,8 +25,8 @@ $border-color: lighten($black, 60);
 $box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
 
 // messaging colors
-$success: $green;
-$error: $red;
+$success: #5cb85c;
+$error: #d9534f;
 
 // default fonts
 $body-font: proxima-nova, sans-serif;
