Align spinner middle

--- a/src/components/Form/Submit/Spinner/styles.module.scss
+++ b/src/components/Form/Submit/Spinner/styles.module.scss
@@ -23,6 +23,7 @@ $thickness:  $size / 3;
   //
   display: inline-block;
   height: $size;
+  margin-bottom: 1rem;
   margin-left: 10px;
   vertical-align: middle;
   width: $size;
