--- a/src/app.scss
+++ b/src/app.scss
@@ -25,9 +25,13 @@ $background: $white;
 $border-color: lighten($black, 60);
 $box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
 
+$body-background: $background;
+$linkColor: #ff5700;
+
 // messaging colors
 $success: #5cb85c;
 $error: #d9534f;
+
 
 // default fonts
 $body-font: proxima-nova, sans-serif;
