--- a/src/app.scss
+++ b/src/app.scss
@@ -25,7 +25,7 @@ $background: $white;
 $border-color: lighten($black, 60);
 $box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
 
-$body-background: $background;
+$body-background: darken($background, 10);
 $linkColor: #ff5700;
 
 // messaging colors
