--- a/src/components/Content/styles.module.scss
+++ b/src/components/Content/styles.module.scss
@@ -1,4 +1,8 @@
 .container {
+  background-color: $white;
+  box-shadow: -1px 0 8px rgba(0, 0, 0, 0.25);
+  margin: 0 auto;
+  max-width: calc(#{$global-width} + 100px);
   width: 100%;
 }
 
