move typography settings to bottom of app.scss

--- a/src/app.scss
+++ b/src/app.scss
@@ -47,6 +47,8 @@ $z-background-img: -1;
 $z-background: -2;
 $z-nav: 5;
 
+
+@import './typography';
 // UNUSED STYLES
 
 // @include foundation-grid;
