--- a/src/components/Nav/Bar/headroom.scss
+++ b/src/components/Nav/Bar/headroom.scss
@@ -1,5 +1,5 @@
 :global(.headroom) {
-  background-color: $white;
+  background-color: rgba(255, 255, 255, 0.25);
   border-bottom: 1px solid $border-color;
   height: $nav-height;
   left: 0;
